deployment/kubernetes/overlays/prod/patches/keycloak-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
          args:
            - start
          volumeMounts: []
      volumes: []
