deployment/kubernetes/overlays/prod/patches/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftgo-consumer-service
spec:
  template:
    spec:
      containers:
        - name: ftgo-consumer-service
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftgo-restaurant-service
spec:
  template:
    spec:
      containers:
        - name: ftgo-restaurant-service
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftgo-order-service
spec:
  template:
    spec:
      containers:
        - name: ftgo-order-service
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftgo-courier-service
spec:
  template:
    spec:
      containers:
        - name: ftgo-courier-service
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftgo-api-gateway
spec:
  template:
    spec:
      containers:
        - name: ftgo-api-gateway
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftgo-mysql
spec:
  template:
    spec:
      containers:
        - name: mysql
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
