deployment/kubernetes/overlays/prod/patches/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ftgo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - ftgo.example.com
      secretName: ftgo-tls-cert
  rules:
    - host: ftgo.example.com
      http:
        paths:
          - path: /api/consumers(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ftgo-consumer-service
                port:
                  number: 8081
          - path: /api/restaurants(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ftgo-restaurant-service
                port:
                  number: 8082
          - path: /api/orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ftgo-order-service
                port:
                  number: 8083
          - path: /api/couriers(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ftgo-courier-service
                port:
                  number: 8084
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
